<resources>
    <string name="app_name">FlirtApp</string>
    <string name="gender_selection_text">I am a:</string>
    <string name="gender_man">Man</string>
    <string name="gender_woman">Woman</string>
    <string name="button_register">Register</string>
    <string name="button_selfie">Take selfie!</string>
    <string name="button_view_women">Women currently logged in</string>
    <string name="button_view_men">Men currently logged in</string>
    <string name="button_view_new_users">Logged in since last visit</string>
    <string name="button_match">Match</string>
    <string name="title_activity_map">Map</string>
    <string name="text_selfie_confirmation">Do you want to use this image?</string>
    <string name="button_yes">Yes</string>
    <string name="button_no">No</string>
    <string name="button_view_matches">View matches</string>
    <string name="button_review_matches">Review matches</string>
    <string name="currently_matching_text">You are being matched...</string>
    <string name="matched_text">You have been matched</string>
    <string name="no_matches_text">Check back later</string>

    <!-- Development strings -->
    <string name="dev_potential_ad_space">Potential ad space</string>
</resources>
